--- a/pubs.html
+++ b/pubs.html
@@ -109,27 +109,39 @@
                             <div class="custom-content col s12 m12 l10 wow fadeIn a1" data-wow-delay="0.1s">
                                 <h2><img src="assets/images/pub.png" width="58pt"> Publications</h2>
 								<BR>
-                                 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
-                                    <h3>Papers Submitted and Revised and Re-submitted 
-                                    (R&R) by August 1, 2023:</h3>
-                                    <BR>
+ 
+ <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
+ <h3>1. Papers Submitted by December 12, 2023:</h3>
+ <BR>
 <h5>
-136. Cai, Z. and P. Chen (2022). New online investor sentiment and asset returns. Submitted. <BR>
-135. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. Submitted. <BR> 
-134. Cai, Z. and X. Liu (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network. Submitted. <BR>
-133. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. R&R for <i><b>Econometric Reviews</b></i><BR>
-132. Cai, Z., Fang, Y, M. Lin and S. Tang (2022). Testing conditional independence in casual inference for time series data. R&R for <i><b>Statistica Neerlandica</b></i>. <BR>
-131. Cai, Z., Fang, Y, M. Lin and S. Tang (2021). A nonparametric test for testing heterogeneity in conditional quantile treatment effects. R&R for <i><b>Econometric Theory</b></i>. <BR>
-130. Yuan, J., Q. Zhang, Z. Xu and Z. Cai (2020). Macroeconomic recession and recovery under the impact of economic policy uncertainty  - On the impact of COVID-19 pandemic. Submitted.<BR>
+141. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
+140. Cai, Z. and Gunawan. (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
+139. Bao, H., Z. Cai, Y. Sun and S. Wang (2023). Penalized model averaging for high-dimensional quantile regressions. Submitted.<BR>
+138. Sun, Y, S. Hong and Z. Cai (2023). Optimal local model averaging for divergent-dimensional functional-coefficient regressions. Submitted. <BR>
+137. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. Submitted. <BR>
+136. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. Submitted. <BR> 
 </h5>
 <BR>
-<h3>Papers Forthcoming:</h3> 
+
+<div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
+ <h3>2. Papers for Revised and Re-submitted (R&R) by December 12, 2023:</h3>
+                                    <BR>
+<h5>
+135. Cai, Z., H. Mei and R. Wang (2023). A model specification test for nonlinear stochastic diffusions with delay. R\&R for <i><b> Statistical Inference for Stochastic Processes</b></i>. <BR>
+134. Liu, X., H. Liu and Z. Cai (2023). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. R\&R for  <i><b>Journal of Empirical Finance</b></i>. <BR>
+133. Cai, Z. and X. Liu (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network. R&R for <i><b>Journal of Business & Economic Statistics</b></i>. <BR>
+132. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. R&R for <i><b>Econometric Reviews</b></i>.<BR>
+</h5>
+<BR>
+<h3>3. Papers Forthcoming:</h3> 
 <BR>
 <h5> 
+131. Cai, Z., Fang, Y, M. Lin and S. Tang (2021). A nonparametric test for testing heterogeneity in conditional quantile treatment effects. Forthcoming in <i><b>Econometric Theory</b></i>. <BR>
+130. Cai, Z., Fang, Y, M. Lin and S. Tang (2022). Testing conditional independence in casual inference for time series data. Forthcoming in <i><b>Statistica Neerlandica</b></i>. <BR>
 129. Cai, Z. and S.Y. Chang (2022). A new test for testing predictability of asset returns with structural breaks. Forthcoming in <i><b>Journal of Financial Econometrics</b></i>. <BR>
 </h5>
 <BR>
-<h3>Papers Published:</h3>
+<h3>4. Papers Published:</h3>
 <BR>
 <h5>
 
@@ -267,7 +279,7 @@
 </h5>
 <BR>
 <BR>
-<h3> Working Papers: </h3>
+<h3> 5. Working Papers: </h3>
 <BR>
 <h5>
 1. Functional coefficient stochastic volatility model. Working paper, The Wang Yanan Institute for Studies in Economics, Xiamen University (2008) (with Zhuo Zhong).
