--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 											<h4><a href="https://economics.ku.edu/ma_overview" target=_new> 3. Master Programs in Economics at KU 
 												<img src="assets/images/link.png" width="18pt" >
 											</a><BR>											</h4> 
-										<h4><a href="https://econometrics.cms-dev.ku.edu/" target=_new> 4. The 2023 Kansas Econometrics Workshop (May 5, 2023) at KU 
+										<h4><a href="https://econometrics.ku.edu/" target=_new> 4. The 2024 Kansas Econometrics Workshop (April 27, 2024) at KU 
 												<img src="assets/images/link.png" width="18pt" >
 											</a><BR>											</h4> 	
                                         </div>                         
