--- a/pubs.html
+++ b/pubs.html
@@ -111,11 +111,12 @@
 								<BR>
  
  <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
- <h3>1. Papers Submitted by December 12, 2023:</h3>
+ <h3>1. Papers Submitted by December 28, 2023:</h3>
  <BR>
 <h5>
+142. Cai, Z., G. Liu, W. Long and X. Luo (2023). Semiparametric conditional mixture copulas with copula selection. Submitted. <BR>
 141. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
-140. Cai, Z. and Gunawan. (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
+140. Cai, Z. and Gunawan (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
 139. Bao, H., Z. Cai, Y. Sun and S. Wang (2023). Penalized model averaging for high-dimensional quantile regressions. Submitted.<BR>
 138. Sun, Y, S. Hong and Z. Cai (2023). Optimal local model averaging for divergent-dimensional functional-coefficient regressions. Submitted. <BR>
 137. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. Submitted. <BR> 
@@ -123,7 +124,7 @@
 <BR>
 
 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
- <h3>2. Papers Revised and Re-submitted (R&R) by December 12, 2023:</h3>
+ <h3>2. Papers Revised and Re-submitted (R&R) by December 28, 2023:</h3>
                                     <BR>
 <h5>
 136. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. R&R for <i><b>Statistica Sinica</b></i>.. <BR>
