--- a/pubs.html
+++ b/pubs.html
@@ -119,7 +119,6 @@
 140. Cai, Z. and Gunawan (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
 139. Bao, H., Z. Cai, Y. Sun and S. Wang (2023). Penalized model averaging for high-dimensional quantile regressions. Submitted.<BR>
 138. Sun, Y, S. Hong and Z. Cai (2023). Optimal local model averaging for divergent-dimensional functional-coefficient regressions. Submitted. <BR>
-137. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. Submitted. <BR> 
 </h5>
 <BR>
 
@@ -127,6 +126,7 @@
  <h3>2. Papers Revised and Re-submitted (R&R) by December 28, 2023:</h3>
                                     <BR>
 <h5>
+137. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. R&R for <i><b>Journal of Financial Econometrics</b></i>. <BR> 
 136. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. R&R for <i><b>Statistica Sinica</b></i>.. <BR>
 135. Cai, Z., H. Mei and R. Wang (2023). A model specification test for nonlinear stochastic diffusions with delay. R&R for <i><b> Statistical Inference for Stochastic Processes</b></i>. <BR>
 134. Liu, X., H. Liu and Z. Cai (2023). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. R&R for  <i><b>Journal of Empirical Finance</b></i>. <BR>
