--- a/pubs.html
+++ b/pubs.html
@@ -114,6 +114,7 @@
  <h3>1. Papers Submitted by December 28, 2023:</h3>
  <BR>
 <h5>
+143. Yang, B., W. Long and Z. Cai (2024). Machine learning based panel data models. Submitted. <BR>
 142. Cai, Z., G. Liu, W. Long and X. Luo (2023). Semiparametric conditional mixture copulas with copula selection. Submitted. <BR>
 141. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
 140. Cai, Z. and Gunawan (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
