--- a/pubs.html
+++ b/pubs.html
@@ -111,6 +111,21 @@
 								<BR>
  
  <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
+ <BR>
+ <h3>0. Five Publications </h3>
+ <BR>
+ I. Cai, Z., J. Fan and Q. Yao (2000). Functional-coefficient regression models for nonlinear time series. <i><b>Journal of the American Statistical Association</b></i>, 95, 941-956. <a target="_new"  style="color:#039be5" href="papers/paper28.pdf">DOWNLOAD </a>.
+<BR>
+II. Cai, Z. and Q. Li (2008). Nonparametric estimation of varying coefficient dynamic panel models. <i><b>Econometric Theory</b></i>, 24, 1321-1342. <a target="_new"  style="color:#039be5" href="papers/paper49.pdf">DOWNLOAD </a>.
+<BR>
+III. Cai, Z. and X. Xu (2008). Nonparametric quantile estimations for dynamic smooth coefficient models. <i><b>Journal of the American Statistical Association</b></i>, 103, 1596-1608. <a target="_new"  style="color:#039be5" href="papers/paper52.pdf">DOWNLOAD </a>.
+<BR>
+IV. Cai, Z., Q. Li and Y. Park (2009). Functional-coefficient models for nonstationary time series data. <i><b>Journal of Econometrics</b></i>, 148, 101-113. <a target="_new"  style="color:#039be5" href="papers/paper53.pdf">DOWNLOAD </a>.
+<BR>
+V. Cai, Z. and T. Juhl (2023). The distribution of rolling regression estimators. <i><b>Journal of Econometrics</b></i>, 235(2), 1447-1463. <a target="_new"  style="color:#039be5" href="papers/paper126.pdf">DOWNLOAD </a>.
+<BR>
+
+<BR> 
  <h3>1. Papers Submitted by December 28, 2023:</h3>
  <BR>
 <h5>
