--- a/index.html
+++ b/index.html
@@ -83,17 +83,19 @@
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
+                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>
                                     <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
-									</ul>
+								</ul>
                                 <ul class="side-nav" id="slide-out">
                                     <li><a href="index.html">HOME</a></li>
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
+                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>   
                                     <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
-                                </ul>
+                               </ul>
                                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
                             </nav>
                         </div>
