--- a/pubs.html
+++ b/pubs.html
@@ -83,7 +83,7 @@
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
-                                    <li><a href="teach.html">TEACHING</a></li>
+                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                     <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
 									</ul>
                                 <ul class="side-nav" id="slide-out">
@@ -91,7 +91,7 @@
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
-                                    <li><a href="teach.html">TEACHING</a></li>
+                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                    <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
                                 </ul>
                                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -116,11 +116,11 @@
  <BR>
  I. Cai, Z., J. Fan and Q. Yao (2000). Functional-coefficient regression models for nonlinear time series. <i><b>Journal of the American Statistical Association</b></i>, 95, 941-956. <a target="_new"  style="color:#039be5" href="papers/paper28.pdf">DOWNLOAD </a>.
 <BR>
-II. Cai, Z. and Q. Li (2008). Nonparametric estimation of varying coefficient dynamic panel models. <i><b>Econometric Theory</b></i>, 24, 1321-1342. <a target="_new"  style="color:#039be5" href="papers/paper49.pdf">DOWNLOAD </a>.
+II. Cai, Z. and X. Xu (2008). Nonparametric quantile estimations for dynamic smooth coefficient models. <i><b>Journal of the American Statistical Association</b></i>, 103, 1596-1608. <a target="_new"  style="color:#039be5" href="papers/paper52.pdf">DOWNLOAD </a>.
 <BR>
-III. Cai, Z. and X. Xu (2008). Nonparametric quantile estimations for dynamic smooth coefficient models. <i><b>Journal of the American Statistical Association</b></i>, 103, 1596-1608. <a target="_new"  style="color:#039be5" href="papers/paper52.pdf">DOWNLOAD </a>.
+III. Cai, Z., Q. Li and Y. Park (2009). Functional-coefficient models for nonstationary time series data. <i><b>Journal of Econometrics</b></i>, 148, 101-113. <a target="_new"  style="color:#039be5" href="papers/paper53.pdf">DOWNLOAD </a>.
 <BR>
-IV. Cai, Z., Q. Li and Y. Park (2009). Functional-coefficient models for nonstationary time series data. <i><b>Journal of Econometrics</b></i>, 148, 101-113. <a target="_new"  style="color:#039be5" href="papers/paper53.pdf">DOWNLOAD </a>.
+IV. Cai, Z., Y. Fang, M. Lin and J. Su (2019). Inferences for a partially varying coefficient model with endogenous regressors. <i><b>Journal of Business & Economic Statistics</b></i>, 37, 158-170. <a target="_new"  style="color:#039be5" href="papers/paper96.pdf">DOWNLOAD </a>
 <BR>
 V. Cai, Z. and T. Juhl (2023). The distribution of rolling regression estimators. <i><b>Journal of Econometrics</b></i>, 235(2), 1447-1463. <a target="_new"  style="color:#039be5" href="papers/paper126.pdf">DOWNLOAD </a>.
 <BR>
