--- a/pubs.html
+++ b/pubs.html
@@ -84,7 +84,7 @@
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
                                     <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                     <li><a href="teach.html">TEACHING</a></li>
-									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
+									<li><a href="cai-cv.pdf"> CV</a></li>	
 									</ul>
                                 <ul class="side-nav" id="slide-out">
                                     <li><a href="index.html">HOME</a></li>
@@ -92,7 +92,7 @@
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
                                     <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                    <li><a href="teach.html">TEACHING</a></li>
-									<li><a href="cai-cv.pdf">DOWNLOAD CV</a></li>	
+									<li><a href="cai-cv.pdf"> CV</a></li>	
                                 </ul>
                                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
                             </nav>
