--- a/pubs.html
+++ b/pubs.html
@@ -112,29 +112,14 @@
  
  <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
  <BR>
- <h3>0. Five Publications </h3>
- <BR>
- I. Cai, Z., J. Fan and Q. Yao (2000). Functional-coefficient regression models for nonlinear time series. <i><b>Journal of the American Statistical Association</b></i>, 95, 941-956. <a target="_new"  style="color:#039be5" href="papers/paper28.pdf">DOWNLOAD </a>.
-<BR>
-II. Cai, Z. and X. Xu (2008). Nonparametric quantile estimations for dynamic smooth coefficient models. <i><b>Journal of the American Statistical Association</b></i>, 103, 1596-1608. <a target="_new"  style="color:#039be5" href="papers/paper52.pdf">DOWNLOAD </a>.
-<BR>
-III. Cai, Z., Q. Li and Y. Park (2009). Functional-coefficient models for nonstationary time series data. <i><b>Journal of Econometrics</b></i>, 148, 101-113. <a target="_new"  style="color:#039be5" href="papers/paper53.pdf">DOWNLOAD </a>.
-<BR>
-IV. Cai, Z., Y. Fang, M. Lin and J. Su (2019). Inferences for a partially varying coefficient model with endogenous regressors. <i><b>Journal of Business & Economic Statistics</b></i>, 37, 158-170. <a target="_new"  style="color:#039be5" href="papers/paper96.pdf">DOWNLOAD </a>
-<BR>
-V. Cai, Z. and T. Juhl (2023). The distribution of rolling regression estimators. <i><b>Journal of Econometrics</b></i>, 235(2), 1447-1463. <a target="_new"  style="color:#039be5" href="papers/paper126.pdf">DOWNLOAD </a>.
-<BR>
-
 <BR> 
  <h3>1. Papers Submitted by December 28, 2023:</h3>
  <BR>
 <h5>
-143. Yang, B., W. Long and Z. Cai (2024). Machine learning based panel data models. Submitted. <BR>
-142. Cai, Z., G. Liu, W. Long and X. Luo (2023). Semiparametric conditional mixture copulas with copula selection. Submitted. <BR>
-141. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
-140. Cai, Z. and Gunawan (2023). A combination forecast for nonparametric models with structural breaks. Submitted. <BR>
-139. Bao, H., Z. Cai, Y. Sun and S. Wang (2023). Penalized model averaging for high-dimensional quantile regressions. Submitted.<BR>
-138. Sun, Y, S. Hong and Z. Cai (2023). Optimal local model averaging for divergent-dimensional functional-coefficient regressions. Submitted. <BR>
+141. Cai, Z., Y. Fang and D. Tian (2024). CAViaR model selection via adaptive Lasso. Submitted to. <BR>
+140. Yang, B., W. Long and Z. Cai (2024). Machine learning based panel data models. Submitted. <BR>
+139. Cai, Z., G. Liu, W. Long and X. Luo (2023). Semiparametric conditional mixture copulas with copula selection. Submitted. <BR>
+138. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
 </h5>
 <BR>
 
@@ -144,15 +129,15 @@ V. Cai, Z. and T. Juhl (2023). The distribution of rolling regression estimators
 <h5>
 137. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. R&R for <i><b>Journal of Financial Econometrics</b></i>. <BR> 
 136. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. R&R for <i><b>Statistica Sinica</b></i>.. <BR>
-135. Cai, Z., H. Mei and R. Wang (2023). A model specification test for nonlinear stochastic diffusions with delay. R&R for <i><b> Statistical Inference for Stochastic Processes</b></i>. <BR>
-134. Liu, X., H. Liu and Z. Cai (2023). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. R&R for  <i><b>Journal of Empirical Finance</b></i>. <BR>
-133. Cai, Z. and X. Liu (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network. R&R for <i><b>Journal of Business & Economic Statistics</b></i>. <BR>
-132. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. R&R for <i><b>Econometric Reviews</b></i>.<BR>
+135. Liu, X., H. Liu and Z. Cai (2023). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. R&R for  <i><b>Journal of Empirical Finance</b></i>. <BR>
+134. Cai, Z. and X. Liu (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network. R&R for <i><b>Journal of Business & Economic Statistics</b></i>. <BR>
+133. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. R&R for <i><b>Econometric Reviews</b></i>.<BR>
 </h5>
 <BR>
 <h3>3. Papers Forthcoming:</h3> 
 <BR>
 <h5> 
+132. Cai, Z., H. Mei and R. Wang (2023). A model specification test for nonlinear stochastic diffusions with delay.Forthcoming in <i><b> Statistical Inference for Stochastic Processes</b></i>. <BR>
 131. Cai, Z., Fang, Y, M. Lin and S. Tang (2021). A nonparametric test for testing heterogeneity in conditional quantile treatment effects. Forthcoming in <i><b>Econometric Theory</b></i>. <BR>
 130. Cai, Z., Fang, Y, M. Lin and S. Tang (2022). Testing conditional independence in casual inference for time series data. Forthcoming in <i><b>Statistica Neerlandica</b></i>. <BR>
 129. Cai, Z. and S.Y. Chang (2022). A new test for testing predictability of asset returns with structural breaks. Forthcoming in <i><b>Journal of Financial Econometrics</b></i>. <BR>
