--- a/pubs.html
+++ b/pubs.html
@@ -83,7 +83,7 @@
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
-                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                     <li><a href="teach.html">TEACHING</a></li>
+                                    <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf"> CV</a></li>	
 									</ul>
                                 <ul class="side-nav" id="slide-out">
@@ -91,7 +91,7 @@
                                     <li><a href="POSITIONS.html">POSITIONS</a></li>
                                     <li><a href="AWARDS.html">AWARDS & HONORS</a></li>
                                     <li><a href="pubs.html">PUBLICATIONS</a></li>
-                                    <li><a href="pub5.html">FIVE PUBLICATIONS</a></li>                                    <li><a href="teach.html">TEACHING</a></li>
+                                    <li><a href="teach.html">TEACHING</a></li>
 									<li><a href="cai-cv.pdf"> CV</a></li>	
                                 </ul>
                                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
