--- a/pubs.html
+++ b/pubs.html
@@ -113,40 +113,47 @@
  <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
  <BR>
 <BR> 
- <h3>1. Papers Submitted by December 28, 2023:</h3>
+ <h3>1. Papers Submitted by September 11, 2025:</h3>
  <BR>
 <h5>
-141. Cai, Z., Y. Fang and D. Tian (2024). CAViaR model selection via adaptive Lasso. Submitted to. <BR>
-140. Yang, B., W. Long and Z. Cai (2024). Machine learning based panel data models. Submitted. <BR>
-139. Cai, Z., G. Liu, W. Long and X. Luo (2023). Semiparametric conditional mixture copulas with copula selection. Submitted. <BR>
-138. Cai, Z., Y. Fang, M. Lin and M. Zhan (2023). Estimating quantile treatment effects for panel data. Submitted. <BR>
+There are 8 papers submitted for a publication. Please contact with Professor Zongwu Cai for details.
 </h5>
 <BR>
 
 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
- <h3>2. Papers Revised and Re-submitted (R&R) by December 28, 2023:</h3>
+ 
+ <h3>2. Papers Revised and Re-submitted (R&R) by September 11, 2025:</h3>
                                     <BR>
 <h5>
-137. Cai, Z., Y. Fang and D. Tian (2022). Assessing tail risk via  a generalized conditional autoregressive expectile model. R&R for <i><b>Journal of Financial Econometrics</b></i>. <BR> 
-136. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. R&R for <i><b>Statistica Sinica</b></i>.. <BR>
-135. Liu, X., H. Liu and Z. Cai (2023). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. R&R for  <i><b>Journal of Empirical Finance</b></i>. <BR>
-134. Cai, Z. and X. Liu (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network. R&R for <i><b>Journal of Business & Economic Statistics</b></i>. <BR>
-133. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. R&R for <i><b>Econometric Reviews</b></i>.<BR>
+146. Sun, Y, S. Hong and Z. Cai (2025). State-varying model averaging prediction. 
+<i><b> Journal of Business and Economic Statistics </b></i>.<BR>
+145. Cai, Z., Y. Fang, M. Lin and Y. Wu (2024). Estimating counterfactual distribution functions via optimal distribution balancing with applications. <i><b> Journal of the Royal Statistical Society, Series B</b></i>.<BR>
+144. Cai, Z. and J. Li (2024). Econometric evaluation of the China-US trade war effects. <i><b> China Economic Review</b></i>.<BR>
+143. Cai, Z., G. Liu, W. Long and X. Luo (2024). Semiparametric conditional mixture copulas with copula selection. <i><b> Journal of Multivariate Analysis</b></i>.<BR>
 </h5>
 <BR>
-<h3>3. Papers Forthcoming:</h3> 
+<h3>3. Papers Forthcoming by September 11, 2025:</h3> 
 <BR>
 <h5> 
-132. Cai, Z., H. Mei and R. Wang (2023). A model specification test for nonlinear stochastic diffusions with delay.Forthcoming in <i><b> Statistical Inference for Stochastic Processes</b></i>. <BR>
-131. Cai, Z., Fang, Y, M. Lin and S. Tang (2021). A nonparametric test for testing heterogeneity in conditional quantile treatment effects. Forthcoming in <i><b>Econometric Theory</b></i>. <BR>
-130. Cai, Z., Fang, Y, M. Lin and S. Tang (2022). Testing conditional independence in casual inference for time series data. Forthcoming in <i><b>Statistica Neerlandica</b></i>. <BR>
-129. Cai, Z. and S.Y. Chang (2022). A new test for testing predictability of asset returns with structural breaks. Forthcoming in <i><b>Journal of Financial Econometrics</b></i>. <BR>
+142. Cai, Z. and J. Hu (2025). A selective review on mathematical programming on macroeconomics. <i><b> Applied Mathematics -- A Journal Of Chinese Universities, Series B</b></i>.<BR>
+141. Cai, Z., M. Shi, W. Wu and Y. Zhao (2022). A panel data quantile model with correlated random effects. <i><b>Econometric Reviews </b></i>.<BR>
+140. Cai, Z., X. Liu and L. Su (2022). Functional-coefficient VAR model for dynamic quantiles and its application to constructing nonparametric financial network.  <i><b>Journal of Business & Economic Statistics</b></i>. <BR>
+139. Cai, Z., Y. Fang and D. Tian (2023). Assessing tail risk via  a generalized conditional autoregressive expectile model. <i><b>Journal of Financial Econometrics</b></i>. <BR> 
+138. Cai, Z., Y. Fang and D. Tian (2024). CAViaR model selection via adaptive Lasso. <i><b> Journal of Time Series Analysis. </b></i>. <BR>
+137. Cai, Z., Y. Fang, M. Lin and Z. Wu (2023). A quasi synthetic control method for nonlinear models with high-dimensional covariates. <i><b> Statistica Sinica</b></i>. <BR>
 </h5>
 <BR>
-<h3>4. Papers Published:</h3>
+<h3>4. Papers Published by September 11, 2025:</h3>
 <BR>
 <h5>
-
+136. Cai, Z., Y. Fang, M. Lin and M. Zhan (2025). Estimating quantile treatment effects for panel data. <i><b> Scientia Sinica Mathematica</b></i>, 56(1), 1-22. <a target="_new"  style="color:#039be5" href="papers/paper136.pdf">DOWNLOAD </a>. <BR>
+135. Cai, Z., Fang, Y, M. Lin and S. Tang (2025). A nonparametric test for testing heterogeneity in conditional quantile treatment effects.  <i><b>Econometric Theory</b></i>, 41(3), 660-687. <a target="_new"  style="color:#039be5" href="papers/paper135.pdf">DOWNLOAD </a>. <BR>
+134. Yuan, J., T. Ma, Y. Wang and Z. Cai (2025). Measurement and decomposition analysis of occupational income inequality in China. <i><b> Stats</b></i>, 8(1), 13. <a target="_new"  style="color:#039be5" href="papers/paper134.pdf">DOWNLOAD </a>.<BR>
+133. Cai, Z. and P. Chen (2024). Online investor sentiment via machine learnings.   <i><b> Mathematics</b></i>, 12(20), 3192. <a target="_new"  style="color:#039be5" href="papers/paper133.pdf">DOWNLOAD </a>.<BR>
+132. Cai, Z., H. Mei and R. Wang (2024). A model specification test for nonlinear stochastic diffusions with delay. <i><b> Statistical Inference for Stochastic Processes</b></i>, 27(3), 795-812. <a target="_new"  style="color:#039be5" href="papers/paper132.pdf">DOWNLOAD </a>.<BR>
+131. Cai, Z. and S.Y. Chang (2024). A new test for testing predictability of asset returns with structural breaks. <i><b>Journal of Financial Econometrics</b></i>, 22(4), 1042-1074. <a target="_new"  style="color:#039be5" href="papers/paper131.pdf">DOWNLOAD </a>.<BR>
+130. Liu, X., H. Liu and Z. Cai (2024). Time-varying relative risk aversion: Theoretical mechanism and empirical evidence. <i><b>Journal of Empirical Finance</b></i>, 78(September), 101535. <a target="_new"  style="color:#039be5" href="papers/paper130.pdf">DOWNLOAD </a>.<BR>
+129. Cai, Z., Fang, Y, M. Lin and S. Tang (2024). Testing conditional independence in casual inference for time series data. <i><b>Statistica Neerlandica</b></i>, 78(2), 397-426. <a target="_new"  style="color:#039be5" href="papers/paper129.pdf">DOWNLOAD </a>.<BR> 
 128. Cai, Z., J. Yuan and Y. Peng (2023). Economic policy uncertainty and macroeconomic forecasting -- Based on a new textual mining method. <i><b>China Journal of Econometrics</b></i>, 3(3), 615-635. <a target="_new"  style="color:#039be5" href="papers/paper128.pdf">DOWNLOAD </a>.<BR> 
 127. Cai, Z., H. Chen and X. Liao (2023). A new robust inference for predictive quantile regression.  <i><b>Journal of Econometrics</b></i>, 234(1), 227-250. <a target="_new"  style="color:#039be5" href="papers/paper127.pdf">DOWNLOAD </a>.<BR>
 126. Cai, Z. and T. Juhl (2023). The distribution of rolling regression estimators. <i><b>Journal of Econometrics</b></i>, 235(2), 1447-1463. <a target="_new"  style="color:#039be5" href="papers/paper126.pdf">DOWNLOAD </a>.<BR>
